# CaptionFlow

./: .env.example  .gitignore  CaptionFlow.cmd  README.md  analisis-mejoras-captionflow.md  index.html  iniciar_captionflow.bat  package-lock.json  package.json  programacion-apis-nanogpt-openai-gemini.md  pyproject.toml  requirements.txt  vite.config.ts
docs/: app-web-local.md  cambios-propuestos-v2.md  guia-uso-personal.md  planificacion-maestra-v2.md  planificacion-mejoras.md  ux-ui-plan.md
prompts/: 01_resumen_claro.md  02_resumen-ejecutivo.md  03_paso_a_paso_profundo.md  04_ultrarresumen.md  an-lisis-cr-tico-avanzado-desmonta-argumentos-sesgos-exageraciones-y-verdades-inc-modas.md  resumen-ejecutivo-brutal-extrae-lo-esencial-elimina-ruido-y-detecta-implicaciones-reales.md
scripts/: dev.mjs  start-captionflow.ps1
src/: App.tsx  styles.css
subtitle_pipeline/: __init__.py  __main__.py  app_config.py  audio_extractor.py  audio_mixer.py  cache.py  doctor.py  dubbing.py  errors.py  export_profiles.py  formatter.py  glossary.py  job_runner.py  local_api.py  models.py  pipeline.py  progress.py  projects.py  providers.py  subtitle_cli.py  subtitle_editor.py  transcriber.py  translator.py  tts.py  validation.py  voice_converter.py
tests/: test_app_config.py  test_audio_extractor.py  test_cache.py  test_cli.py  test_doctor.py  test_dubbing.py  test_export_profiles.py  test_formatter.py  test_glossary.py  test_job_runner.py  test_local_api.py  test_nanogpt_whisper.py  test_openai_compatible_translation.py  test_pipeline.py  test_projects.py  test_provider_factories.py  test_provider_router.py  test_providers.py  (+3 more)
(+357 files in other folders)
