[project]
name = "subtitle-pipeline"
version = "0.1.0"
description = "Local video transcription and translation to subtitles"
requires-python = ">=3.10"

[project.scripts]
subtitle-pipeline = "subtitle_pipeline.__main__:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.5.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py310"
