[project]
name = "subtitle-pipeline"
version = "0.1.0"
description = "Local video transcription and translation to subtitles"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
subtitle-pipeline = "subtitle_pipeline.__main__:main"

[project.optional-dependencies]
media = [
    "ffmpeg-python>=0.2.0",
]
transcription = [
    "faster-whisper>=1.0.0",
    "torch>=2.0.0",
]
translation-api = [
    "anthropic>=0.30.0",
]
translation-local = [
    "transformers>=4.34.0",
    "torch>=2.0.0",
    "sentencepiece",
]
tts = [
    "edge-tts>=6.1.0",
]
dubbing = [
    "numpy>=1.24.0",
    "soundfile>=0.12.0",
    "librosa>=0.10.0",
]
all = [
    "ffmpeg-python>=0.2.0",
    "faster-whisper>=1.0.0",
    "transformers>=4.34.0",
    "torch>=2.0.0",
    "sentencepiece",
    "anthropic>=0.30.0",
    "edge-tts>=6.1.0",
    "numpy>=1.24.0",
    "soundfile>=0.12.0",
    "librosa>=0.10.0",
]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.5.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py310"
